# SAASLIB

./: .gitignore  DESIGN.md  PRODUCT.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: admin_enrichment.py  article_sources.py  articles.py  bookmarks.py  books.py  captures.py  cards.py  coverage.py  decks.py  dictionary.py  highlights.py  internal.py  pronounce.py  reviews.py  series.py  stats.py  translate.py  videos.py
backend/app/core/: admin_auth.py  alerts.py  auth.py  cache.py  circuit.py  config.py  db.py  distributed_lock.py  http.py  metrics.py  rate_limit.py  redis_client.py
backend/app/data/: local_dictionary.json
backend/app/db/: supabase_client.py
backend/app/schemas/: article_sources.py  articles.py  bookmarks.py  books.py  captures.py  cards.py  decks.py  dictionary.py  highlights.py  pronunciation.py  reviews.py  series.py  stats.py  video.py
backend/app/services/: ai_response_parser.py  article_extractor.py  card_factory.py  core_vocabulary_seed.py  coverage.py  dictionary.py  fsrs_scheduler.py  gutenberg.py  lemmatizer.py  normalize.py  playlist_metadata.py  prompt_template.py  pronunciation.py  source_importer.py  srs_config.py  stats.py  translator.py  video_ingest.py  word_lookup.py
backend/app/services/doc_importers/: base.py  docusaurus.py  importer.py  mkdocs.py  sphinx.py
backend/app/services/enrichment/: __init__.py  chain.py  factory.py  gemini.py  groq.py  key_pool.py  prompt.py  (+3 more)
backend/data/: core_vocabulary.yaml
backend/scripts/: apply_migration_16.py  apply_migration_17.py  apply_migration_21.py  bootstrap_core_vocabulary.py  diag_cues.py  diag_pipeline.py  ingest_one_video.py  ingest_pronunciation.py  pronunciation_corpus.csv  reindex_pronunciation_words.py  reingest_video.py  seed_core_vocabulary.py  show_coverage.py  test_b2.py  test_b4.py  test_b6.py  test_b9_repaso.py  test_e2e.py  test_rls.py
backend/tests/: conftest.py  test_admin_auth.py  test_ai_parser.py  test_article_sources_api.py  test_articles_api.py  test_articles_extractor.py  test_articles_schemas.py  test_bookmark_schemas.py  test_captures_article_source.py  test_captures_video_validation.py  test_cards_actions.py  test_cards_media.py  test_core_vocabulary_seed.py  test_coverage_api.py  test_coverage_service.py  test_decks_api.py  test_doc_importers.py  test_enrichment_chain_provider.py  test_enrichment_key_pool.py  test_fsrs.py  test_highlight_schemas.py  test_local_dict_provider.py  test_normalize.py  test_playlist_metadata.py  test_series_worker.py  test_video_ingest.py  test_videos_router.py  test_word_lookup.py
(+367 files in other folders)
