[project]
name = "linguareader-backend"
version = "0.1.0"
description = "LinguaReader SaaS API"
authors = [
    {name = "Gerardo",email = "gerardo.pantaleon@nedi.mx"}
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.26,<0.0.27)",
    "httpx (>=0.28.1,<0.29.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "supabase (>=2.29.0,<3.0.0)",
    "spacy (>=3.8.14,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "black (>=26.3.1,<27.0.0)"
]
