[project]
name = "linguareader-backend"
version = "0.1.0"
description = "LinguaReader SaaS API"
authors = [
    {name = "Gerardo",email = "gerardo.pantaleon@nedi.mx"}
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.26,<0.0.27)",
    "httpx (>=0.28.1,<0.29.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "supabase (>=2.29.0,<3.0.0)",
    "spacy (>=3.8.14,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "tzdata (>=2026.2,<2027.0)",
    "cachetools (>=5.5,<7.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "redis (>=7.4.0,<8.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "prometheus-client (>=0.25.0,<0.26.0)",
    "yt-dlp (>=2025.10.0)",
    "webvtt-py (>=0.5.1,<1.0.0)",
    "fsrs (>=6.3.1,<7.0.0)",
    "python-magic (>=0.4.27,<0.5.0)",
    "python-magic-bin (>=0.4.14,<0.5.0); sys_platform == 'win32'",
    "google-genai (>=1.0.0,<2.0.0)",
    "groq (>=0.18.0,<1.0.0)",
    "apscheduler (>=3.10.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "black (>=26.3.1,<27.0.0)"
]
